--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   firebase_core: ^1.1.0
   firebase_auth: ^1.1.2
   cloud_firestore: ^1.0.7
-  mailer: ^3.0.4
+  mailto: ^2.0.0
+  url_launcher: ^6.0.4
+  date_format: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -48,8 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - imagens/rede.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
