Alterado date format

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cloud_firestore: ^1.0.7
   url_launcher: ^6.0.4
   intl: 0.17.0
+  duration: ^3.0.6
+  date_format: ^2.0.2
 
 dev_dependencies:
   flutter_test:
