--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: 0.17.0
   duration: ^3.0.6
   date_format: ^2.0.2
+  flutter_speed_dial: ^3.0.5
 
 dev_dependencies:
   flutter_test:
